--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
 .gris {
  opacity: 0.5;       
-}
-.titre{
- font-weight : bold;
 }
 
 .intitule{
@@ -12,12 +11,18 @@ img{
  float : left;
 }
 #bg{
- height: 60vh;
- background-size: cover;
- background-attachment: fixed;
+  height: 60vh;
+  background: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url("../img/lake.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 #me{
+ color:#fff;
  margin-top:20vh;
+}
+#me .title{
+  font-weight: 900;
 }
 .wrapper{
  padding-top: 60px;
@@ -104,6 +109,8 @@ img{
 
 .logo {
  color: #fff;
- font-size: 1.5rem; }
+ font-size: 1.5rem;
+}
 .logo i {
- margin-right: 0.5rem; }
+ margin-right: 0.5rem;
+}
